--- a/languages/en.json
+++ b/languages/en.json
@@ -1,5 +1,7 @@
 {
 	"en": "English",
 	"vi": "Việt Nam",
-	"home": "Home"
+	"ja":  "Japanese",
+	"home": "Home",
+	"chat with us": "Chat with us!"
 }
