--- a/languages/vi.json
+++ b/languages/vi.json
@@ -1,5 +1,7 @@
 {
-	"en": "English",
+	"en": "Tiếng Anh",
 	"vi": "Việt Nam",
-	"home": "Trang chủ"
+	"ja":  "Nhật Bản",
+	"home": "Trang chủ",
+	"chat with us": "Bạn cần tư vấn!"
 }
